force-app/main/default/objects/SDOC__Envelope__c/SDOC__Envelope__c.object-meta.xml
<CustomObject>
    <label>Envelope</label>
    <nameField>
        <label>Envelope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>