force-app/main/default/objects/SDOC__Envelope__c/fields/SDOC__Verification_Secret__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Verification_Secret__c</fullName>
    <label>Verification Secret</label>
    <length>64</length>
    <type>Text</type>
</CustomField>