force-app/main/default/objects/SDOC__Envelope__c/fields/SDOC__View_Expiration__c.field-meta.xml
<CustomField>
    <fullName>SDOC__View_Expiration__c</fullName>
    <description>The date and time at which the ability to view this envelope&apos;s document(s) expires or expired.</description>
    <label>View Expiration</label>
    <type>DateTime</type>
</CustomField>