force-app/main/default/objects/SDOC__Envelope__c/fields/SDOC__View_Recipient__c.field-meta.xml
<CustomField>
    <fullName>SDOC__View_Recipient__c</fullName>
    <description>The email address of the viewer of this envelope, specified by the sender.</description>
    <label>View Recipient</label>
    <type>Email</type>
</CustomField>